Update link to missing values page in index.html

--- a/index.html
+++ b/index.html
@@ -106,7 +106,15 @@
         </li>
 
         <li>
-            <a href="1-08-groupby-basics.html">
+            <a href="1-08-missing-values.html">
+                1.08 – GroupBy Fundamentals
+            </a>
+            <p>
+                Split–apply–combine pattern, aggregation, and real-world examples.
+            </p>
+        </li>
+        <li>
+            <a href="1-08-missing-values.html">
                 1.08 – GroupBy Fundamentals
             </a>
             <p>
