Update link from 1-08 to 1-09 in index.html

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </p>
         </li>
         <li>
-            <a href="1-08-missing-values.html">
+            <a href="1-09-aggregation.html">
                 1.08 – GroupBy Fundamentals
             </a>
             <p>
