--- a/index.html
+++ b/index.html
@@ -122,6 +122,15 @@
             </p>
         </li>
 
+        <li>
+            <a href="1-09-aggregation.html">
+                1.08 – GroupBy Fundamentals
+            </a>
+            <p>
+                Split–apply–combine pattern, aggregation, and real-world examples.
+            </p>
+        </li>
+
     </ul>
 </main>
 
