Update link to GroupBy Fundamentals page

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </li>
 
         <li>
-            <a href="1-09-aggregation.html">
+            <a href="2-13-Groupby-Operations.html">
                 1.08 – GroupBy Fundamentals
             </a>
             <p>
