Add link to GroupBy Fundamentals in index.html

--- a/index.html
+++ b/index.html
@@ -130,6 +130,14 @@
                 Split–apply–combine pattern, aggregation, and real-world examples.
             </p>
         </li>
+        <li>
+            <a href="2-17-Combining_Datasets.html">
+                1.08 – GroupBy Fundamentals
+            </a>
+            <p>
+                Split–apply–combine pattern, aggregation, and real-world examples.
+            </p>
+        </li>
 
     </ul>
 </main>
