Revise titles and descriptions in index.html
Updated links and descriptions for aggregation and grouping topics.

--- a/index.html
+++ b/index.html
@@ -115,16 +115,16 @@
         </li>
         <li>
             <a href="1-09-aggregation.html">
-                1.08 – GroupBy Fundamentals
+                1.09 - Aggregation in Pandas Dataframe
             </a>
             <p>
-                Split–apply–combine pattern, aggregation, and real-world examples.
+                Perform calculation on sieries to obrain aggregated values on the dataframe. 
             </p>
         </li>
 
         <li>
             <a href="2-13-Groupby-Operations.html">
-                1.08 – GroupBy Fundamentals
+                2-13 Grupping operation of data. Dataframe in action with grouping commands.
             </a>
             <p>
                 Split–apply–combine pattern, aggregation, and real-world examples.
@@ -132,10 +132,10 @@
         </li>
         <li>
             <a href="2-17-Combining_Datasets.html">
-                1.08 – GroupBy Fundamentals
+                2-17 Combining Dataset. 
             </a>
             <p>
-                Split–apply–combine pattern, aggregation, and real-world examples.
+                Example of merging series and pivoting them. 
             </p>
         </li>
 
