Add new lab topics to index.html
Added new list items for Series and DataFrame basics and combining datasets.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,16 @@
 
 <main>
     <ul class="lab-list">
+        
+
+        <li>
+            <a href="1-03-Series-and-Dataframe-Basic.html">
+                1.03 – Series and dataframe - basic.
+            </a>
+            <p>
+                Boolean masks, conditional filtering, multiple conditions, and common pitfalls.
+            </p>
+        </li>
 
         <li>
             <a href="1-06-filtering-dataframe.html">
@@ -128,6 +138,14 @@
             </a>
             <p>
                 Split–apply–combine pattern, aggregation, and real-world examples.
+            </p>
+        </li>
+        <li>
+            <a href="2-17-Combining_Datasets.html">
+                2-17 Combining Dataset. 
+            </a>
+            <p>
+                Example of merging series and pivoting them. 
             </p>
         </li>
         <li>
