--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 1.03 – Series and dataframe - basic.
             </a>
             <p>
-                Boolean masks, conditional filtering, multiple conditions, and common pitfalls.
+                Introduction to series and dataframe. Produce and slice series / dataframe. Indexing and computation series. Rename columns. 
             </p>
         </li>
 
